# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("logging") {
  sources = [
    "log_impl.cc",
    "log_impl.h",
    "main.cc",
  ]

  deps = [
    "//lib/ftl",
    "//mojo/public/c:system",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/system",
    "//mojo/public/cpp/utility",
    "//mojo/services/log/interfaces",
    "//mojo/system",
  ]
}
